tests/NormalTests/paczka1/fuzzy1/61231881.err
Error in line 6: S279 A601 21,3
Error in line 21: ufIHONkJEj S505 36,8
Error in line 29: TAolk7vZx A519 66,9
Error in line 18: F2MtkC3y S505 18,6
